--- a/mislich.html
+++ b/mislich.html
@@ -69,10 +69,9 @@
         <div class="collapse navbar-collapse" id="navbar-main">
             <ul class="nav navbar-nav">
                 <li><a href="#">О нас</a></li>
-                <li><a href="#">Курсы</a></li>
                 <li><a href="#">Подготовка к олимпиадам</a></li>
+                <li><a href="#">Курсы</a></li>
                 <li><a href="#">Консультации</a></li>
-                <li><a href="#">Контакты</a></li>
             </ul>
         </div>
     </nav>
@@ -89,140 +88,89 @@
     </div>
 </div>
 <div class="container">
-    <p class="main-sub-title">Центр  дополнительного  образования</p>
-    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
+    <div class="main-flex-block">
+        <div class="main-title-object-block"><div class="main-block-flex-text">Приглашаем обучающихся для подготовки к олимпиадам
+            по предметам:</div>
+        <div class="main-object-block">
+            <div class="main-object">
+                <div class="free-service-item">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+                </div>
+                <div class="free-service-item">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
+                </div>
+                <div class="free-service-item">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
+                </div>
+                <div class="free-service-item">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
+                </div>
+                <div class="free-service-item">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
+                </div>
+            </div>
+            <div class="main-button-block">
+                <div class="order-btn">
+                    <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="main-block-image">
+            <img src="images/main1.png" alt="">
 
-    <blockquote>Изучаю, мыслю, знаю!</blockquote>
-    <!--<p>Образовательный Центр "Мыслич и Знанич" создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
-    <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
-    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда "Талант и Успех".</p>
-    <blockquote>Изучаю, мыслю, знаю!</blockquote>-->
-    <!--<h2 class="main-title" id="courses">Курсы по направлениям</h2>
-    <div class="courses-flex-block">
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/matem2.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная математика (с 5 кл)
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/matem1.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная физика (с 9 кл)
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/himiya.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная химия
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/informatica.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная информатика
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/econom.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная экономика
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/geometr.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Геометрия на подвижных чертежах
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/matem3.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Занимательная математика
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/fizika.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Физика вокруг нас
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/biznes.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Решение бизнес-кейсов
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/deutsch.png" alt="">
-            </div>
-            <div class="courses-title">
-                Немецкий язык с носителем
-            </div>
-        </div>
-    </div>-->
-    <div class="order-btn">
-        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
-    </div>
-    <h2 class="main-title" id="olympic">Приглашам обучающихся для подготовки к олимпиадам по предметам:</h2>
-    <div class="main-check-bottom">
-        <div class="free-service-item">
-            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
-        </div>
-        <div class="free-service-item">
-            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
-        </div>
-        <div class="free-service-item">
-            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
-        </div>
-        <div class="free-service-item">
-            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
-        </div>
-        <div class="free-service-item">
-            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
         </div>
     </div>
-    <!--
-    <h2 class="main-title" id="consultations">Консультации</h2>
-    <div class="image-consult">
-        <img src="images/ege.jpg" alt="">
+
+    <div class="main-flex-block">
+        <div class="main-title-object-block"><div class="main-block-flex-text">Осуществляем эффективную подготовку школьников к ЕГЭ и ОГЭ
+            по предметам:</div>
+            <div class="main-object-block">
+                <div class="main-object">
+                    <div class="free-service-item">
+                        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+                    </div>
+                    <div class="free-service-item">
+                        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
+                    </div>
+                    <div class="free-service-item">
+                        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
+                    </div>
+                    <div class="free-service-item">
+                        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
+                    </div>
+                </div>
+                <div class="main-button-block">
+                    <div class="order-btn">
+                        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-block-image">
+            <img src="images/main2.jpg" alt="">
+
+        </div>
     </div>
-    <p>Мыслич и Знанич оказывает консультационные услуги при подготовке исследовательских работ и проектов школьников.</p>
-    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедших повышение квалификации в образовательном центре «Сириус» Образовательного фонда «Талант и Успех».</p>
-    <div class="order-btn">
-        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+    <div class="main-flex-block">
+        <div class="main-title-object-block"><div class="main-block-flex-text">Оказываем консультационные услуги при подготовке исследовательских работ и проектов школьников</div>
+            <div class="main-object-block">
+                <div class="main-object">
+
+                </div>
+                <div class="main-button-block">
+                    <div class="order-btn">
+                        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-block-image">
+            <img src="images/main2.jpg" alt="">
+
+        </div>
     </div>
-    <h2 class="main-title" id="contacts">Контакты</h2>
-    <div class="contact-title">
-        <span class="contact-title-bold">Адрес:</span>
-        <p class="contact-sub-title">Курск, улица Димитрова, 76, ком. №309</p>
-    </div>
-    <div class="contact-block-flex">
-        <a href="tel:+79092371337">+7 (909) 237-13-37</a>
-        <a href="mailto:myslichiznanitch46@yandex.ru">myslichiznanitch46@yandex.ru</a>
-    </div>
-    <div class="map-block">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d75623558d8d49ff909b8f39f8f6d786d358d6ff4a2eadb777cd3a60e5f56bc&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-    </div>-->
+
 </div>
 <footer class="back-footer">
     <div class="container">
