--- a/olympic.html
+++ b/olympic.html
@@ -89,22 +89,92 @@
     </div>
 </div>
 <div class="container">
-    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
-    <h2 class="main-title" id="olympic">Приглашам обучающихся для подготовки к олимпиадам по предметам:</h2>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+    <h1 class="main-title">Подготовка к олимпиадам</h1>
+    <div class="image-olimpics">
+        <img src="images/olimpics.png" alt="">
     </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
+    <h2 class="olimpic-margin">Подготовка к олимпиадам по направлениям</h2>
+    <div class="courses-flex-block">
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem2.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная математика (с 5 кл)
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem1.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная физика (с 9 кл)
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/himiya.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная химия
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/informatica.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная информатика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/econom.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная экономика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/geometr.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Геометрия на подвижных чертежах
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem3.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Занимательная математика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/fizika.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Физика вокруг нас
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/biznes.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Решение бизнес-кейсов
+            </div>
+        </div>
+        <!--<div class="courses-item">
+            <div class="courses-img">
+                <img src="images/deutsch.png" alt="">
+            </div>
+            <div class="courses-title">
+                Немецкий язык с носителем
+            </div>
+        </div>-->
     </div>
     <div class="order-btn">
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
