--- a/courses.html
+++ b/courses.html
@@ -72,106 +72,49 @@
                 <li><a href="#">Курсы</a></li>
                 <li><a href="#">Подготовка к олимпиадам</a></li>
                 <li><a href="#">Консультации</a></li>
-                <li><a href="#">Контакты</a></li>
             </ul>
         </div>
     </nav>
 </div>
-<div class="owl-carousel">
-    <div class="owl-item-img">
-        <img src="images/banner1.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner2.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner3.jpg" alt="">
-    </div>
-</div>
 <div class="container">
-    <h1 class="main-title">Мыслич и Знанич</h1>
-    <h2 class="main-title" id="courses">Курсы по направлениям</h2>
+    <h1 class="main-title">Курсы</h1>
+    <div class="image-olimpics">
+        <img src="images/courses.jpg" alt="">
+    </div>
+    <h2 class="olimpic-margin">Подготовка школьников к ОГЭ и ЕГЭ по предметам</h2>
     <div class="courses-flex-block">
-        <div class="courses-item">
+        <div class="courses-item courses-item-big">
             <div class="courses-img">
-                <img src="images/matem2.jpg" alt="">
+                <img src="images/course1.png" alt="">
             </div>
             <div class="courses-title">
-                Олимпиадная математика (с 5 кл)
+                Математика
             </div>
         </div>
-        <div class="courses-item">
+        <div class="courses-item courses-item-big">
             <div class="courses-img">
-                <img src="images/matem1.jpg" alt="">
+                <img src="images/course2.png" alt="">
             </div>
             <div class="courses-title">
-                Олимпиадная физика (с 9 кл)
+                Физика
             </div>
         </div>
-        <div class="courses-item">
+        <div class="courses-item courses-item-big">
             <div class="courses-img">
-                <img src="images/himiya.jpg" alt="">
+                <img src="images/course3.jpg" alt="">
             </div>
             <div class="courses-title">
-                Олимпиадная химия
+                Информатика
             </div>
         </div>
-        <div class="courses-item">
+        <div class="courses-item courses-item-big">
             <div class="courses-img">
-                <img src="images/informatica.jpg" alt="">
+                <img src="images/course4.png" alt="">
             </div>
             <div class="courses-title">
-                Олимпиадная информатика
+                Химия
             </div>
         </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/econom.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Олимпиадная экономика
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/geometr.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Геометрия на подвижных чертежах
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/matem3.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Занимательная математика
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/fizika.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Физика вокруг нас
-            </div>
-        </div>
-        <div class="courses-item">
-            <div class="courses-img">
-                <img src="images/biznes.jpg" alt="">
-            </div>
-            <div class="courses-title">
-                Решение бизнес-кейсов
-            </div>
-        </div>
-        <!--<div class="courses-item">
-            <div class="courses-img">
-                <img src="images/deutsch.png" alt="">
-            </div>
-            <div class="courses-title">
-                Немецкий язык с носителем
-            </div>
-        </div>-->
     </div>
     <div class="order-btn">
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
